// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize block knows block begins 1`] = `
Array [
  Object {
    "params": Array [
      "swift",
    ],
    "position": Object {
      "end": Object {
        "column": 17,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.begin",
  },
]
`;

exports[`tokenize block knows block begins 2`] = `
Array [
  Object {
    "params": Array [
      "swift",
    ],
    "position": Object {
      "end": Object {
        "column": 17,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.begin",
  },
]
`;

exports[`tokenize block knows block begins 3`] = `
Array [
  Object {
    "params": Array [],
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.begin",
  },
]
`;

exports[`tokenize block knows block begins 4`] = `
Array [
  Object {
    "params": Array [],
    "position": Object {
      "end": Object {
        "column": 16,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.begin",
  },
]
`;

exports[`tokenize block knows block begins 5`] = `
Array [
  Object {
    "params": Array [
      "swift",
      ":tangle",
      "code.swift",
    ],
    "position": Object {
      "end": Object {
        "column": 36,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.begin",
  },
]
`;

exports[`tokenize block knows block ends 1`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.end",
  },
]
`;

exports[`tokenize block knows block ends 2`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 2,
        "line": 0,
      },
    },
    "type": "block.end",
  },
]
`;

exports[`tokenize block knows block ends 3`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.end",
  },
]
`;

exports[`tokenize block knows block ends 4`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 9,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.end",
  },
]
`;

exports[`tokenize block knows block ends 5`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 11,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "block.end",
  },
]
`;

exports[`tokenize block knows these are not block begins 1`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 19,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
    "value": "#+begi😀n_src swift",
  },
]
`;

exports[`tokenize block knows these are not block ends 1`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 10,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
    "value": "#+end_SRC ",
  },
]
`;

exports[`tokenize block knows these are not block ends 2`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 15,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
    "value": "#+end_src param",
  },
]
`;
